--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,15 @@
-.DS_Store
 node_modules/
-dist/
-npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 **/*.log
 
-tests/**/coverage/
-tests/e2e/reports
-selenium-debug.log
-
-.svn
-
 # Editor directories and files
 .idea
 .vscode
+.temp
 sh.exe.stackdump
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.local
-.env.serve
-config/*.conf
-package-lock.json
